# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

ohos_shared_library("pasteboard_napi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${pasteboard_innerkits_path}/include",
    "//foundation/distributeddatamgr/pasteboard/framework/tlv",
    "//foundation/distributeddatamgr/pasteboard/framework/uri",
    "napi/include",
    "${pasteboard_utils_path}/native/include",
  ]

  version_script = "pasteboard_js_map"
  cflags = [
    "-fPIC",
    "-g3",
  ]

  cflags_cc = [
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  sources = [
    "napi/src/async_call.cpp",
    "napi/src/napi_data_utils.cpp",
    "napi/src/napi_init.cpp",
    "napi/src/napi_pasteboard.cpp",
    "napi/src/napi_pasteboard_common.cpp",
    "napi/src/napi_pasteboard_observer.cpp",
    "napi/src/napi_pasteboard_progress_signal.cpp",
    "napi/src/napi_pastedata.cpp",
    "napi/src/napi_pastedata_record.cpp",
    "napi/src/napi_systempasteboard.cpp",
  ]

  deps = [
    "${pasteboard_framework_path}:pasteboard_framework",
    "${pasteboard_root_path}/framework/innerkits:pasteboard_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:napi_common",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "image_framework:image",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "libuv:uv",
    "napi:ace_napi",
    "udmf:udmf_client",
    "udmf:udmf_data_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "distributeddatamgr"
  part_name = "pasteboard"
}
