# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

ohos_shared_library("libpasteboard") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${pasteboard_interfaces_path}/ndk/include",
    "${pasteboard_framework_path}/innerkits/include",
    "${pasteboard_interfaces_path}/kits/napi/include",
    "${pasteboard_framework_path}/framework/include",
    "${pasteboard_service_path}/core/include",
    "${pasteboard_utils_path}/native/include",
  ]
  sources = [
    "${pasteboard_interfaces_path}/ndk/src/oh_pasteboard.cpp",
    "${pasteboard_interfaces_path}/ndk/src/oh_pasteboard_observer_impl.cpp",
  ]

  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]

  deps = [ "${pasteboard_root_path}/framework/innerkits:pasteboard_client" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "udmf:libudmf",
  ]

  relative_install_dir = "ndk"
  part_name = "pasteboard"
  subsystem_name = "distributeddatamgr"
  output_extension = "so"
}
