# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${pasteboard_innerkits_path}/include",
    "${pasteboard_utils_path}/native/include",
    "${pasteboard_service_path}/dfx/src",
    "${pasteboard_service_path}/dfx/src/behaviour",
    "${pasteboard_service_path}/dfx/src/fault",
    "${pasteboard_service_path}/dfx/src/statistic",
    "${pasteboard_service_path}/core/include",
    "include",
    "unittest/include",
    "//foundation/distributeddatamgr/pasteboard/framework/tlv",
    "//foundation/distributeddatamgr/pasteboard/framework/uri",
  ]
}

module_output_path = "pasteboard/pasteboard_service"

ohos_unittest("PasteboardServiceTest") {
  module_out_path = module_output_path

  sources = [
    "${pasteboard_service_path}/dfx/src/behaviour/pasteboard_behaviour_reporter_impl.cpp",
    "${pasteboard_service_path}/dfx/src/fault/pasteboard_fault_impl.cpp",
    "${pasteboard_service_path}/dfx/src/reporter.cpp",
    "${pasteboard_service_path}/dfx/src/statistic/time_consuming_statistic_impl.cpp",
    "unittest/src/dfx_test.cpp",
    "unittest/src/paste_service_test.cpp",
  ]
  configs = [ ":module_private_config" ]
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "ffrt:libffrt",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
  ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_framework_path}:pasteboard_framework",
  ]
}

ohos_unittest("PasteboardDialogNormalTest") {
  module_out_path = module_output_path
  sources = [
    "${pasteboard_service_path}/core/src/pasteboard_dialog.cpp",
    "unittest/src/pasteboard_dialog_normal_branch_test.cpp",
  ]
  configs = [ ":module_private_config" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("PasteboardDialogAbnormalTest") {
  module_out_path = module_output_path

  sources = [
    "${pasteboard_service_path}/core/src/pasteboard_dialog.cpp",
    "unittest/src/pasteboard_dialog_abnormal_branch_test.cpp",
  ]
  configs = [ ":module_private_config" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}

ohos_unittest("PasteboardLinkedListTest") {
  module_out_path = module_output_path
  include_dirs = [ "${pasteboard_utils_path}/native/include" ]
  sources = [ "unittest/src/pasteboard_linked_list_test.cpp" ]
  external_deps = [ "googletest:gtest_main" ]
}

ohos_unittest("PasteboardDeduplicateMemoryTest") {
  module_out_path = module_output_path
  include_dirs = [
    "${pasteboard_service_path}/dfx/src",
    "${pasteboard_utils_path}/native/include",
  ]
  sources = [ "unittest/src/pasteboard_deduplicate_memory_test.cpp" ]
  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
}

ohos_unittest("PasteboardPatternTest") {
  module_out_path = module_output_path
  sources = [
    "${pasteboard_service_path}/core/src/pasteboard_pattern.cpp",
    "unittest/src/pasteboard_pattern_test.cpp",
  ]
  configs = [ ":module_private_config" ]
  external_deps = [
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "libxml2:libxml2",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_framework_path}:pasteboard_framework",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":PasteboardDeduplicateMemoryTest",
    ":PasteboardDialogAbnormalTest",
    ":PasteboardDialogNormalTest",
    ":PasteboardLinkedListTest",
    ":PasteboardPatternTest",
    ":PasteboardServiceTest",
  ]
}
