# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

group("pasteboard_unittest") {
  testonly = true
  deps = [
    "framework:framework_unittest",
    "services:services_unittest",
    "interfaces:interfaces_unittest",
  ]
}

config("unittest_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${pasteboard_innerkits_path}/include",
    "${pasteboard_utils_path}/native/include",
    "${pasteboard_service_path}/core/include",
    "${pasteboard_framework_path}/framework/include",
    "${pasteboard_framework_path}/innerkits/include",
    "//third_party/googletest/include",
  ]
  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]
}
