# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

module_output_path = "pasteboard/pasteboard"

config("module_private_config") {
  include_dirs = [ "${pasteboard_utils_path}/native/include" ]
}

ohos_unittest("PasteboardUtilsNativeTest") {
  module_out_path = module_output_path

  sources = [
    "${pasteboard_utils_path}/native/src/pasteboard_common.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_time.cpp",
    "pasteboard_common_test.cpp",
    "pasteboard_time_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true

  deps = [ ":PasteboardUtilsNativeTest" ]
}
