# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("EventCenterFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file = "${pasteboard_root_path}/test/fuzztest/eventcenter_fuzzer"

  include_dirs = [ "${pasteboard_root_path}/framework/framework/include" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "eventcenter_fuzzer.cpp" ]

  deps = [ "${pasteboard_root_path}/framework/framework:pasteboard_framework" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":EventCenterFuzzTest" ]
}
###############################################################################
