# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("PasteboardAbilityManagerFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file =
      "${pasteboard_root_path}/test/fuzztest/pasteboardabilitymanager_fuzzer"

  include_dirs = [
    "${pasteboard_service_path}/core/include",
    "${pasteboard_innerkits_path}/include",
    "${pasteboard_utils_path}/native/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "pasteboardabilitymanager_fuzzer.cpp" ]

  sources +=
      [ "${pasteboard_service_path}/core/src/pasteboard_ability_manager.cpp" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":PasteboardAbilityManagerFuzzTest" ]
}
