# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("PasteboardClientFuzzTest") {
  module_out_path = "distributeddatamgr/pasteboard"

  fuzz_config_file = "//foundation/distributeddatamgr/pasteboard/test/fuzztest/pasteboardclient_fuzzer"

  configs = [ "//foundation/distributeddatamgr/pasteboard/framework/innerkits:pasteboard_client_config" ]

  include_dirs = [
    "//foundation/distributeddatamgr/pasteboard/framework/innerkits/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "pasteboardclient_fuzzer.cpp" ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PasteboardClientFuzzTest",
  ]
}
###############################################################################
